fix: overflow

--- a/style/about-us.css
+++ b/style/about-us.css
@@ -6,13 +6,12 @@
     color: white;
 }
 
+html 
+
 body {
     overflow-x: hidden;
   }
 
-  nav {
-    overflow-x: hidden;
-  }
 
 @keyframes slide-in {
     from {
@@ -58,11 +57,13 @@ a:hover {
     align-items: center;
     font-family: system-ui, system-ui, -apple-system, Helvetica, sans-serif;
     height: 10vh;
+    z-index: 1;
 }
 
 .nav-list {
     display: flex;
     list-style: none;
+    z-index: 1;
 }
 
 .nav-list li{
@@ -92,7 +93,7 @@ a:hover {
 .container {
     background-color: #393E46;
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -127,7 +128,6 @@ p {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 530;
     margin-top: 10vh;
-    height: auto;
 }
 
 @media (max-width: 1180px) {
@@ -160,6 +160,7 @@ p {
 
       .nav-list li a {
         color: #00ADB5;
+        font-weight: 900;
       }
 
       .mobile-menu {
@@ -170,11 +171,6 @@ p {
     .nav-list.active {
       transform: translateX(0);
     }
-    .container {
-        width: 100vw;
-        height: 100vh;
-    }
-
     @keyframes navLinkFade {
         from {
             opacity: 0;
@@ -190,6 +186,6 @@ p {
             margin-left: 0;
         }
         .text h1, .text span{
-            font-size: 3rem;
+            font-size: 2rem;
         }
     }
